performance improvement
avoid excessive collection copy

Before this commit:

```
[small cluster]
3 nodes, 10 topics, 30 partitions, 3 replicas.
generate 1611.582 proposals per second.

[medium cluster]
30 nodes, 50 topics, 50 partitions, 3 replicas.
generate 309.176 proposals per second.

[big cluster]
100 nodes, 100 topics, 100 partitions, 1 replicas.
generate 58.275 proposals per second.

[many replicas]
1000 nodes, 30 topics, 100 partitions, 30 replicas.
generate 105.048 proposals per second.

```

After this commit:

```
[small cluster]
3 nodes, 10 topics, 30 partitions, 3 replicas.
Generate 2572.548 proposals per second.

[medium cluster]
30 nodes, 50 topics, 50 partitions, 3 replicas.
Generate 971.523 proposals per second.

[big cluster]
100 nodes, 100 topics, 100 partitions, 1 replicas.
Generate 278.370 proposals per second.

[many replicas]
1000 nodes, 30 topics, 100 partitions, 30 replicas.
Generate 205.396 proposals per second.

```